@@ -1,12 +1,11 @@
-killall background-properties-capplet
-killall bonobo-moniker-archiver
-killall sound-properties
-killall keyboard-properties
-killall oafd
-oaf-slay
+killall background-properties-capplet 2>/dev/null
+killall sound-properties 2>/dev/null
+killall keyboard-properties 2>/dev/null
+killall mouse-properties-capplet 2>/dev/null
+killall bonobo-moniker-archiver 2>/dev/null
 
-killall -9 background-properties-capplet
-killall -9 bonobo-moniker-archiver
-killall -9 sound-properties
-killall -9 keyboard-properties
-killall -9 oafd
+killall -9 background-properties-capplet 2>/dev/null
+killall -9 sound-properties 2>/dev/null
+killall -9 keyboard-properties 2>/dev/null
+killall -9 mouse-properties-capplet 2>/dev/null
+killall -9 bonobo-moniker-archiver 2>/dev/null
